// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AddRecipient should render 1`] = `
<div>
  <div
    class="AddRecipientstyles__AddRecipientWrapper-cy4ht8-0 HduBv"
  >
    <div
      class="text-theme-secondary-text hover:text-theme-primary-600"
    >
      <div
        class="flex items-center mb-2 space-x-2"
      >
        <div
          class="font-normal transition-colors duration-100 text-md"
        >
          Select a Single or Multiple Recipient Transaction
        </div>
        <div>
          <div
            class="rounded-full cursor-pointer text-theme-primary-600 hover:text-theme-primary-100 questionmark"
          >
            <div
              class="sc-bdfBwQ iyevwF"
              height="20"
              width="20"
            >
              <svg>
                questionmark.svg
              </svg>
            </div>
          </div>
        </div>
      </div>
      <div
        class="flex items-stretch select-buttons"
      >
        <button
          class="Button__StyledButton-mdtvtf-0 dznQvQ flex-1"
          data-testid="AddRecipient__single"
          type="button"
        >
          <div
            class="flex relative items-center space-x-2"
          >
            Single
          </div>
        </button>
        <button
          class="Button__StyledButton-mdtvtf-0 eJuaWR flex-1 border-l-0"
          data-testid="AddRecipient__multi"
          type="button"
        >
          <div
            class="flex relative items-center space-x-2"
          >
            Multiple
          </div>
        </button>
      </div>
    </div>
    <div
      class="SubForm__SubFormWrapper-c4tqfs-0 bbQsCL mt-6"
    >
      <div
        class="space-y-8"
      >
        <fieldset
          class="FormField__FormFieldStyled-yeauwd-0 cnlnjc flex flex-col space-y-2"
        >
          <label
            class="inline-block flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-700"
            data-testid="FormLabel"
            for="recipientAddress"
          >
            Recipient
            <div
              class="mt-1 ml-1 w-1 h-1 rounded-full bg-theme-danger-400"
              data-testid="FormLabel__required"
            />
          </label>
          <div>
            <div
              class="flex relative items-center w-full text-left"
              data-testid="SelectRecipient__wrapper"
            >
              <div
                class="relative w-full"
              >
                <div
                  class="Input__InputWrapperStyled-wu99qs-0 hlKLIE sr-only"
                >
                  <div
                    class="relative flex flex-1"
                  >
                    <input
                      aria-invalid="false"
                      class="Input__InputStyled-wu99qs-1 ioFtLo p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
                      data-testid="select-list__input"
                      name="recipientAddress"
                      readonly=""
                      value=""
                    />
                  </div>
                </div>
                <div
                  class="relative w-full"
                >
                  <div
                    aria-expanded="false"
                    aria-haspopup="listbox"
                    aria-owns="downshift-1-menu"
                    role="combobox"
                  >
                    <label
                      for="downshift-0-input"
                      id="downshift-1-label"
                    />
                    <div
                      class="Input__InputWrapperStyled-wu99qs-0 hlKLIE cursor-default"
                    >
                      <div
                        class="Circle-uw7h4j-0 blBpcG bg-theme-secondary-200 dark:bg-theme-secondary-700 border-theme-secondary-200 dark:border-theme-secondary-700"
                      />
                      <div
                        class="relative flex flex-1"
                      >
                        <input
                          aria-autocomplete="list"
                          aria-controls="downshift-1-menu"
                          aria-labelledby="downshift-1-label"
                          autocomplete="off"
                          class="Input__InputStyled-wu99qs-1 ioFtLo p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
                          data-testid="SelectDropdownInput__input"
                          id="downshift-0-input"
                          name="recipientAddress"
                          placeholder="Select option"
                          value=""
                        />
                      </div>
                      <div
                        class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
                      >
                        <div
                          class=""
                        >
                          <div
                            class="flex items-center cursor-pointer"
                            data-testid="SelectRecipient__select-recipient"
                          >
                            <div
                              class="sc-bdfBwQ iyevwF"
                              height="20"
                              width="20"
                            >
                              <svg>
                                user.svg
                              </svg>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                    <ul
                      aria-labelledby="downshift-1-label"
                      class="styles__SelectOptionsList-b2falt-0 heJAAA"
                      id="downshift-1-menu"
                      role="listbox"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </fieldset>
        <fieldset
          class="FormField__FormFieldStyled-yeauwd-0 cnlnjc flex flex-col space-y-2"
        >
          <label
            class="inline-block flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-700"
            data-testid="FormLabel"
            for="amount"
          >
            Amount
            <div
              class="mt-1 ml-1 w-1 h-1 rounded-full bg-theme-danger-400"
              data-testid="FormLabel__required"
            />
          </label>
          <div
            class="flex space-x-2"
          >
            <div
              class="flex-1"
            >
              <div
                class="relative"
              >
                <div
                  class="Input__InputWrapperStyled-wu99qs-0 hlKLIE"
                >
                  <div
                    class="relative flex flex-1"
                  >
                    <input
                      class="Input__InputStyled-wu99qs-1 ioFtLo p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
                      data-testid="AddRecipient__amount"
                      name="amount"
                      placeholder="Amount"
                      type="text"
                      value=""
                    />
                  </div>
                  <div
                    class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
                  >
                    <div
                      class=""
                    >
                      <span
                        class="whitespace-no-break font-semibold text-sm text-theme-secondary-500 dark:text-theme-secondary-700"
                      >
                        Max
                         
                        33.75089801
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="inline-flex"
            >
              <button
                class="AddRecipient__InputButtonStyled-sc-14iwd9r-0 cBZIpU"
                data-testid="AddRecipient__send-all"
                type="button"
              >
                Send All
              </button>
            </div>
          </div>
        </fieldset>
      </div>
    </div>
  </div>
</div>
`;

exports[`AddRecipient should render with multiple recipients tab 1`] = `
<div>
  <div
    class="AddRecipientstyles__AddRecipientWrapper-cy4ht8-0 HduBv"
  >
    <div
      class="text-theme-secondary-text hover:text-theme-primary-600"
    >
      <div
        class="flex items-center mb-2 space-x-2"
      >
        <div
          class="font-normal transition-colors duration-100 text-md"
        >
          Select a Single or Multiple Recipient Transaction
        </div>
        <div>
          <div
            class="rounded-full cursor-pointer text-theme-primary-600 hover:text-theme-primary-100 questionmark"
          >
            <div
              class="sc-bdfBwQ iyevwF"
              height="20"
              width="20"
            >
              <svg>
                questionmark.svg
              </svg>
            </div>
          </div>
        </div>
      </div>
      <div
        class="flex items-stretch select-buttons"
      >
        <button
          class="Button__StyledButton-mdtvtf-0 dznQvQ flex-1"
          data-testid="AddRecipient__single"
          type="button"
        >
          <div
            class="flex relative items-center space-x-2"
          >
            Single
          </div>
        </button>
        <button
          class="Button__StyledButton-mdtvtf-0 eJuaWR flex-1 border-l-0"
          data-testid="AddRecipient__multi"
          type="button"
        >
          <div
            class="flex relative items-center space-x-2"
          >
            Multiple
          </div>
        </button>
      </div>
    </div>
    <div
      class="SubForm__SubFormWrapper-c4tqfs-0 bbQsCL mt-6"
    >
      <div
        class="space-y-8"
      >
        <fieldset
          class="FormField__FormFieldStyled-yeauwd-0 cnlnjc flex flex-col space-y-2"
        >
          <label
            class="inline-block flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-700"
            data-testid="FormLabel"
            for="recipientAddress"
          >
            Recipient
            <div
              class="mt-1 ml-1 w-1 h-1 rounded-full bg-theme-danger-400"
              data-testid="FormLabel__required"
            />
          </label>
          <div>
            <div
              class="flex relative items-center w-full text-left"
              data-testid="SelectRecipient__wrapper"
            >
              <div
                class="relative w-full"
              >
                <div
                  class="Input__InputWrapperStyled-wu99qs-0 hlKLIE sr-only"
                >
                  <div
                    class="relative flex flex-1"
                  >
                    <input
                      aria-invalid="false"
                      class="Input__InputStyled-wu99qs-1 ioFtLo p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
                      data-testid="select-list__input"
                      name="recipientAddress"
                      readonly=""
                      value=""
                    />
                  </div>
                </div>
                <div
                  class="relative w-full"
                >
                  <div
                    aria-expanded="false"
                    aria-haspopup="listbox"
                    aria-owns="downshift-15-menu"
                    role="combobox"
                  >
                    <label
                      for="downshift-14-input"
                      id="downshift-15-label"
                    />
                    <div
                      class="Input__InputWrapperStyled-wu99qs-0 hlKLIE cursor-default"
                    >
                      <div
                        class="Circle-uw7h4j-0 blBpcG bg-theme-secondary-200 dark:bg-theme-secondary-700 border-theme-secondary-200 dark:border-theme-secondary-700"
                      />
                      <div
                        class="relative flex flex-1"
                      >
                        <input
                          aria-autocomplete="list"
                          aria-controls="downshift-15-menu"
                          aria-labelledby="downshift-15-label"
                          autocomplete="off"
                          class="Input__InputStyled-wu99qs-1 ioFtLo p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
                          data-testid="SelectDropdownInput__input"
                          id="downshift-14-input"
                          name="recipientAddress"
                          placeholder="Select option"
                          value=""
                        />
                      </div>
                      <div
                        class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
                      >
                        <div
                          class=""
                        >
                          <div
                            class="flex items-center cursor-pointer"
                            data-testid="SelectRecipient__select-recipient"
                          >
                            <div
                              class="sc-bdfBwQ iyevwF"
                              height="20"
                              width="20"
                            >
                              <svg>
                                user.svg
                              </svg>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                    <ul
                      aria-labelledby="downshift-15-label"
                      class="styles__SelectOptionsList-b2falt-0 heJAAA"
                      id="downshift-15-menu"
                      role="listbox"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </fieldset>
        <fieldset
          class="FormField__FormFieldStyled-yeauwd-0 cnlnjc flex flex-col space-y-2"
        >
          <label
            class="inline-block flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-700"
            data-testid="FormLabel"
            for="amount"
          >
            Amount
            <div
              class="mt-1 ml-1 w-1 h-1 rounded-full bg-theme-danger-400"
              data-testid="FormLabel__required"
            />
          </label>
          <div
            class="flex space-x-2"
          >
            <div
              class="flex-1"
            >
              <div
                class="relative"
              >
                <div
                  class="Input__InputWrapperStyled-wu99qs-0 hlKLIE"
                >
                  <div
                    class="relative flex flex-1"
                  >
                    <input
                      class="Input__InputStyled-wu99qs-1 ioFtLo p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
                      data-testid="AddRecipient__amount"
                      name="amount"
                      placeholder="Amount"
                      type="text"
                      value=""
                    />
                  </div>
                  <div
                    class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
                  >
                    <div
                      class=""
                    >
                      <span
                        class="whitespace-no-break font-semibold text-sm text-theme-secondary-500 dark:text-theme-secondary-700"
                      >
                        Max
                         
                        33.75089801
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="inline-flex"
            >
              <button
                class="AddRecipient__InputButtonStyled-sc-14iwd9r-0 cBZIpU"
                data-testid="AddRecipient__send-all"
                type="button"
              >
                Send All
              </button>
            </div>
          </div>
        </fieldset>
      </div>
    </div>
  </div>
</div>
`;

exports[`AddRecipient should render with single recipient data 1`] = `
<div>
  <div
    class="AddRecipientstyles__AddRecipientWrapper-cy4ht8-0 HduBv"
  >
    <div
      class="text-theme-secondary-text hover:text-theme-primary-600"
    >
      <div
        class="flex items-center mb-2 space-x-2"
      >
        <div
          class="font-normal transition-colors duration-100 text-md"
        >
          Select a Single or Multiple Recipient Transaction
        </div>
        <div>
          <div
            class="rounded-full cursor-pointer text-theme-primary-600 hover:text-theme-primary-100 questionmark"
          >
            <div
              class="sc-bdfBwQ iyevwF"
              height="20"
              width="20"
            >
              <svg>
                questionmark.svg
              </svg>
            </div>
          </div>
        </div>
      </div>
      <div
        class="flex items-stretch select-buttons"
      >
        <button
          class="Button__StyledButton-mdtvtf-0 dznQvQ flex-1"
          data-testid="AddRecipient__single"
          type="button"
        >
          <div
            class="flex relative items-center space-x-2"
          >
            Single
          </div>
        </button>
        <button
          class="Button__StyledButton-mdtvtf-0 eJuaWR flex-1 border-l-0"
          data-testid="AddRecipient__multi"
          type="button"
        >
          <div
            class="flex relative items-center space-x-2"
          >
            Multiple
          </div>
        </button>
      </div>
    </div>
    <div
      class="SubForm__SubFormWrapper-c4tqfs-0 bbQsCL mt-6"
    >
      <div
        class="space-y-8"
      >
        <fieldset
          class="FormField__FormFieldStyled-yeauwd-0 cnlnjc flex flex-col space-y-2"
        >
          <label
            class="inline-block flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-700"
            data-testid="FormLabel"
            for="recipientAddress"
          >
            Recipient
            <div
              class="mt-1 ml-1 w-1 h-1 rounded-full bg-theme-danger-400"
              data-testid="FormLabel__required"
            />
          </label>
          <div>
            <div
              class="flex relative items-center w-full text-left"
              data-testid="SelectRecipient__wrapper"
            >
              <div
                class="relative w-full"
              >
                <div
                  class="Input__InputWrapperStyled-wu99qs-0 hlKLIE sr-only"
                >
                  <div
                    class="relative flex flex-1"
                  >
                    <input
                      aria-invalid="false"
                      class="Input__InputStyled-wu99qs-1 ioFtLo p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
                      data-testid="select-list__input"
                      name="recipientAddress"
                      readonly=""
                      value="D6Z26L69gdk9qYmTv5uzk3uGepigtHY4ax"
                    />
                  </div>
                </div>
                <div
                  class="relative w-full"
                >
                  <div
                    aria-expanded="false"
                    aria-haspopup="listbox"
                    aria-owns="downshift-9-menu"
                    role="combobox"
                  >
                    <label
                      for="downshift-8-input"
                      id="downshift-9-label"
                    />
                    <div
                      class="Input__InputWrapperStyled-wu99qs-0 hlKLIE cursor-default"
                    >
                      <div
                        class="Avatar__AvatarWrapper-sc-1vsy2s2-0 kvvaRs"
                        data-testid="Avatar"
                      >
                        <div
                          class="w-full h-full"
                        >
                          <img
                            alt="D6Z26L69gdk9qYmTv5uzk3uGepigtHY4ax"
                            src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(255, 87, 34)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"35\\" cx=\\"70\\" cy=\\"50\\" fill=\\"rgb(244, 67, 54)\\"/><circle r=\\"45\\" cx=\\"30\\" cy=\\"40\\" fill=\\"rgb(0, 150, 136)\\"/><circle r=\\"40\\" cx=\\"20\\" cy=\\"60\\" fill=\\"rgb(255, 193, 7)\\"/></svg>"
                            title="D6Z26L69gdk9qYmTv5uzk3uGepigtHY4ax"
                          />
                        </div>
                      </div>
                      <div
                        class="relative flex flex-1"
                      >
                        <input
                          aria-autocomplete="list"
                          aria-controls="downshift-9-menu"
                          aria-labelledby="downshift-9-label"
                          autocomplete="off"
                          class="Input__InputStyled-wu99qs-1 ioFtLo p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
                          data-testid="SelectDropdownInput__input"
                          id="downshift-8-input"
                          name="recipientAddress"
                          placeholder="Select option"
                          value="D6Z26L69gdk9qYmTv5uzk3uGepigtHY4ax"
                        />
                      </div>
                      <div
                        class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
                      >
                        <div
                          class=""
                        >
                          <div
                            class="flex items-center cursor-pointer"
                            data-testid="SelectRecipient__select-recipient"
                          >
                            <div
                              class="sc-bdfBwQ iyevwF"
                              height="20"
                              width="20"
                            >
                              <svg>
                                user.svg
                              </svg>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                    <ul
                      aria-labelledby="downshift-9-label"
                      class="styles__SelectOptionsList-b2falt-0 heJAAA"
                      id="downshift-9-menu"
                      role="listbox"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </fieldset>
        <fieldset
          class="FormField__FormFieldStyled-yeauwd-0 cnlnjc flex flex-col space-y-2"
        >
          <label
            class="inline-block flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-700"
            data-testid="FormLabel"
            for="amount"
          >
            Amount
            <div
              class="mt-1 ml-1 w-1 h-1 rounded-full bg-theme-danger-400"
              data-testid="FormLabel__required"
            />
          </label>
          <div
            class="flex space-x-2"
          >
            <div
              class="flex-1"
            >
              <div
                class="relative"
              >
                <div
                  class="Input__InputWrapperStyled-wu99qs-0 hlKLIE"
                >
                  <div
                    class="relative flex flex-1"
                  >
                    <input
                      class="Input__InputStyled-wu99qs-1 ioFtLo p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
                      data-testid="AddRecipient__amount"
                      name="amount"
                      placeholder="Amount"
                      type="text"
                      value="1"
                    />
                  </div>
                  <div
                    class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
                  >
                    <div
                      class=""
                    >
                      <span
                        class="whitespace-no-break font-semibold text-sm text-theme-secondary-500 dark:text-theme-secondary-700"
                      >
                        Max
                         
                        33.75089801
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="inline-flex"
            >
              <button
                class="AddRecipient__InputButtonStyled-sc-14iwd9r-0 cBZIpU"
                data-testid="AddRecipient__send-all"
                type="button"
              >
                Send All
              </button>
            </div>
          </div>
        </fieldset>
      </div>
    </div>
  </div>
</div>
`;

exports[`AddRecipient should render without recipients 1`] = `
<div>
  <div
    class="AddRecipientstyles__AddRecipientWrapper-cy4ht8-0 HduBv"
  >
    <div
      class="text-theme-secondary-text hover:text-theme-primary-600"
    >
      <div
        class="flex items-center mb-2 space-x-2"
      >
        <div
          class="font-normal transition-colors duration-100 text-md"
        >
          Select a Single or Multiple Recipient Transaction
        </div>
        <div>
          <div
            class="rounded-full cursor-pointer text-theme-primary-600 hover:text-theme-primary-100 questionmark"
          >
            <div
              class="sc-bdfBwQ iyevwF"
              height="20"
              width="20"
            >
              <svg>
                questionmark.svg
              </svg>
            </div>
          </div>
        </div>
      </div>
      <div
        class="flex items-stretch select-buttons"
      >
        <button
          class="Button__StyledButton-mdtvtf-0 dznQvQ flex-1"
          data-testid="AddRecipient__single"
          type="button"
        >
          <div
            class="flex relative items-center space-x-2"
          >
            Single
          </div>
        </button>
        <button
          class="Button__StyledButton-mdtvtf-0 eJuaWR flex-1 border-l-0"
          data-testid="AddRecipient__multi"
          type="button"
        >
          <div
            class="flex relative items-center space-x-2"
          >
            Multiple
          </div>
        </button>
      </div>
    </div>
    <div
      class="SubForm__SubFormWrapper-c4tqfs-0 bbQsCL mt-6"
    >
      <div
        class="space-y-8"
      >
        <fieldset
          class="FormField__FormFieldStyled-yeauwd-0 cnlnjc flex flex-col space-y-2"
        >
          <label
            class="inline-block flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-700"
            data-testid="FormLabel"
            for="recipientAddress"
          >
            Recipient
            <div
              class="mt-1 ml-1 w-1 h-1 rounded-full bg-theme-danger-400"
              data-testid="FormLabel__required"
            />
          </label>
          <div>
            <div
              class="flex relative items-center w-full text-left"
              data-testid="SelectRecipient__wrapper"
            >
              <div
                class="relative w-full"
              >
                <div
                  class="Input__InputWrapperStyled-wu99qs-0 hlKLIE sr-only"
                >
                  <div
                    class="relative flex flex-1"
                  >
                    <input
                      aria-invalid="false"
                      class="Input__InputStyled-wu99qs-1 ioFtLo p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
                      data-testid="select-list__input"
                      name="recipientAddress"
                      readonly=""
                      value=""
                    />
                  </div>
                </div>
                <div
                  class="relative w-full"
                >
                  <div
                    aria-expanded="false"
                    aria-haspopup="listbox"
                    aria-owns="downshift-5-menu"
                    role="combobox"
                  >
                    <label
                      for="downshift-4-input"
                      id="downshift-5-label"
                    />
                    <div
                      class="Input__InputWrapperStyled-wu99qs-0 hlKLIE cursor-default"
                    >
                      <div
                        class="Circle-uw7h4j-0 blBpcG bg-theme-secondary-200 dark:bg-theme-secondary-700 border-theme-secondary-200 dark:border-theme-secondary-700"
                      />
                      <div
                        class="relative flex flex-1"
                      >
                        <input
                          aria-autocomplete="list"
                          aria-controls="downshift-5-menu"
                          aria-labelledby="downshift-5-label"
                          autocomplete="off"
                          class="Input__InputStyled-wu99qs-1 ioFtLo p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
                          data-testid="SelectDropdownInput__input"
                          id="downshift-4-input"
                          name="recipientAddress"
                          placeholder="Select option"
                          value=""
                        />
                      </div>
                      <div
                        class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
                      >
                        <div
                          class=""
                        >
                          <div
                            class="flex items-center cursor-pointer"
                            data-testid="SelectRecipient__select-recipient"
                          >
                            <div
                              class="sc-bdfBwQ iyevwF"
                              height="20"
                              width="20"
                            >
                              <svg>
                                user.svg
                              </svg>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                    <ul
                      aria-labelledby="downshift-5-label"
                      class="styles__SelectOptionsList-b2falt-0 heJAAA"
                      id="downshift-5-menu"
                      role="listbox"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </fieldset>
        <fieldset
          class="FormField__FormFieldStyled-yeauwd-0 cnlnjc flex flex-col space-y-2"
        >
          <label
            class="inline-block flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-700"
            data-testid="FormLabel"
            for="amount"
          >
            Amount
            <div
              class="mt-1 ml-1 w-1 h-1 rounded-full bg-theme-danger-400"
              data-testid="FormLabel__required"
            />
          </label>
          <div
            class="flex space-x-2"
          >
            <div
              class="flex-1"
            >
              <div
                class="relative"
              >
                <div
                  class="Input__InputWrapperStyled-wu99qs-0 hlKLIE"
                >
                  <div
                    class="relative flex flex-1"
                  >
                    <input
                      class="Input__InputStyled-wu99qs-1 ioFtLo p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
                      data-testid="AddRecipient__amount"
                      name="amount"
                      placeholder="Amount"
                      type="text"
                      value=""
                    />
                  </div>
                  <div
                    class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
                  >
                    <div
                      class=""
                    >
                      <span
                        class="whitespace-no-break font-semibold text-sm text-theme-secondary-500 dark:text-theme-secondary-700"
                      >
                        Max
                         
                        33.75089801
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="inline-flex"
            >
              <button
                class="AddRecipient__InputButtonStyled-sc-14iwd9r-0 cBZIpU"
                data-testid="AddRecipient__send-all"
                type="button"
              >
                Send All
              </button>
            </div>
          </div>
        </fieldset>
      </div>
    </div>
  </div>
</div>
`;

exports[`AddRecipient should render without the single & multiple tabs 1`] = `
<div>
  <div
    class="AddRecipientstyles__AddRecipientWrapper-cy4ht8-0 HduBv"
  >
    <div
      class="SubForm__SubFormWrapper-c4tqfs-0 bbQsCL"
    >
      <div
        class="space-y-8"
      >
        <fieldset
          class="FormField__FormFieldStyled-yeauwd-0 cnlnjc flex flex-col space-y-2"
        >
          <label
            class="inline-block flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-700"
            data-testid="FormLabel"
            for="recipientAddress"
          >
            Recipient
            <div
              class="mt-1 ml-1 w-1 h-1 rounded-full bg-theme-danger-400"
              data-testid="FormLabel__required"
            />
          </label>
          <div>
            <div
              class="flex relative items-center w-full text-left"
              data-testid="SelectRecipient__wrapper"
            >
              <div
                class="relative w-full"
              >
                <div
                  class="Input__InputWrapperStyled-wu99qs-0 hlKLIE sr-only"
                >
                  <div
                    class="relative flex flex-1"
                  >
                    <input
                      aria-invalid="false"
                      class="Input__InputStyled-wu99qs-1 ioFtLo p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
                      data-testid="select-list__input"
                      name="recipientAddress"
                      readonly=""
                      value=""
                    />
                  </div>
                </div>
                <div
                  class="relative w-full"
                >
                  <div
                    aria-expanded="false"
                    aria-haspopup="listbox"
                    aria-owns="downshift-19-menu"
                    role="combobox"
                  >
                    <label
                      for="downshift-18-input"
                      id="downshift-19-label"
                    />
                    <div
                      class="Input__InputWrapperStyled-wu99qs-0 hlKLIE cursor-default"
                    >
                      <div
                        class="Circle-uw7h4j-0 blBpcG bg-theme-secondary-200 dark:bg-theme-secondary-700 border-theme-secondary-200 dark:border-theme-secondary-700"
                      />
                      <div
                        class="relative flex flex-1"
                      >
                        <input
                          aria-autocomplete="list"
                          aria-controls="downshift-19-menu"
                          aria-labelledby="downshift-19-label"
                          autocomplete="off"
                          class="Input__InputStyled-wu99qs-1 ioFtLo p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
                          data-testid="SelectDropdownInput__input"
                          id="downshift-18-input"
                          name="recipientAddress"
                          placeholder="Select option"
                          value=""
                        />
                      </div>
                      <div
                        class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
                      >
                        <div
                          class=""
                        >
                          <div
                            class="flex items-center cursor-pointer"
                            data-testid="SelectRecipient__select-recipient"
                          >
                            <div
                              class="sc-bdfBwQ iyevwF"
                              height="20"
                              width="20"
                            >
                              <svg>
                                user.svg
                              </svg>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                    <ul
                      aria-labelledby="downshift-19-label"
                      class="styles__SelectOptionsList-b2falt-0 heJAAA"
                      id="downshift-19-menu"
                      role="listbox"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </fieldset>
        <fieldset
          class="FormField__FormFieldStyled-yeauwd-0 cnlnjc flex flex-col space-y-2"
        >
          <label
            class="inline-block flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-700"
            data-testid="FormLabel"
            for="amount"
          >
            Amount
            <div
              class="mt-1 ml-1 w-1 h-1 rounded-full bg-theme-danger-400"
              data-testid="FormLabel__required"
            />
          </label>
          <div
            class="flex space-x-2"
          >
            <div
              class="flex-1"
            >
              <div
                class="relative"
              >
                <div
                  class="Input__InputWrapperStyled-wu99qs-0 hlKLIE"
                >
                  <div
                    class="relative flex flex-1"
                  >
                    <input
                      class="Input__InputStyled-wu99qs-1 ioFtLo p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
                      data-testid="AddRecipient__amount"
                      name="amount"
                      placeholder="Amount"
                      type="text"
                      value=""
                    />
                  </div>
                  <div
                    class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
                  >
                    <div
                      class=""
                    >
                      <span
                        class="whitespace-no-break font-semibold text-sm text-theme-secondary-500 dark:text-theme-secondary-700"
                      >
                        Max
                         
                        33.75089801
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="inline-flex"
            >
              <button
                class="AddRecipient__InputButtonStyled-sc-14iwd9r-0 cBZIpU"
                data-testid="AddRecipient__send-all"
                type="button"
              >
                Send All
              </button>
            </div>
          </div>
        </fieldset>
      </div>
    </div>
  </div>
</div>
`;

exports[`AddRecipient should set available amount 1`] = `
<div>
  <div
    class="AddRecipientstyles__AddRecipientWrapper-cy4ht8-0 HduBv"
  >
    <div
      class="text-theme-secondary-text hover:text-theme-primary-600"
    >
      <div
        class="flex items-center mb-2 space-x-2"
      >
        <div
          class="font-normal transition-colors duration-100 text-md"
        >
          Select a Single or Multiple Recipient Transaction
        </div>
        <div>
          <div
            class="rounded-full cursor-pointer text-theme-primary-600 hover:text-theme-primary-100 questionmark"
          >
            <div
              class="sc-bdfBwQ iyevwF"
              height="20"
              width="20"
            >
              <svg>
                questionmark.svg
              </svg>
            </div>
          </div>
        </div>
      </div>
      <div
        class="flex items-stretch select-buttons"
      >
        <button
          class="Button__StyledButton-mdtvtf-0 dznQvQ flex-1"
          data-testid="AddRecipient__single"
          type="button"
        >
          <div
            class="flex relative items-center space-x-2"
          >
            Single
          </div>
        </button>
        <button
          class="Button__StyledButton-mdtvtf-0 eJuaWR flex-1 border-l-0"
          data-testid="AddRecipient__multi"
          type="button"
        >
          <div
            class="flex relative items-center space-x-2"
          >
            Multiple
          </div>
        </button>
      </div>
    </div>
    <div
      class="SubForm__SubFormWrapper-c4tqfs-0 bbQsCL mt-6"
    >
      <div
        class="space-y-8"
      >
        <fieldset
          class="FormField__FormFieldStyled-yeauwd-0 cnlnjc flex flex-col space-y-2"
        >
          <label
            class="inline-block flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-700"
            data-testid="FormLabel"
            for="recipientAddress"
          >
            Recipient
            <div
              class="mt-1 ml-1 w-1 h-1 rounded-full bg-theme-danger-400"
              data-testid="FormLabel__required"
            />
          </label>
          <div>
            <div
              class="flex relative items-center w-full text-left"
              data-testid="SelectRecipient__wrapper"
            >
              <div
                class="relative w-full"
              >
                <div
                  class="Input__InputWrapperStyled-wu99qs-0 hlKLIE sr-only"
                >
                  <div
                    class="relative flex flex-1"
                  >
                    <input
                      aria-invalid="false"
                      class="Input__InputStyled-wu99qs-1 ioFtLo p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
                      data-testid="select-list__input"
                      name="recipientAddress"
                      readonly=""
                      value=""
                    />
                  </div>
                </div>
                <div
                  class="relative w-full"
                >
                  <div
                    aria-expanded="false"
                    aria-haspopup="listbox"
                    aria-owns="downshift-47-menu"
                    role="combobox"
                  >
                    <label
                      for="downshift-46-input"
                      id="downshift-47-label"
                    />
                    <div
                      class="Input__InputWrapperStyled-wu99qs-0 hlKLIE cursor-default"
                    >
                      <div
                        class="Circle-uw7h4j-0 blBpcG bg-theme-secondary-200 dark:bg-theme-secondary-700 border-theme-secondary-200 dark:border-theme-secondary-700"
                      />
                      <div
                        class="relative flex flex-1"
                      >
                        <input
                          aria-autocomplete="list"
                          aria-controls="downshift-47-menu"
                          aria-labelledby="downshift-47-label"
                          autocomplete="off"
                          class="Input__InputStyled-wu99qs-1 ioFtLo p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
                          data-testid="SelectDropdownInput__input"
                          id="downshift-46-input"
                          name="recipientAddress"
                          placeholder="Select option"
                          value=""
                        />
                      </div>
                      <div
                        class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
                      >
                        <div
                          class=""
                        >
                          <div
                            class="flex items-center cursor-pointer"
                            data-testid="SelectRecipient__select-recipient"
                          >
                            <div
                              class="sc-bdfBwQ iyevwF"
                              height="20"
                              width="20"
                            >
                              <svg>
                                user.svg
                              </svg>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                    <ul
                      aria-labelledby="downshift-47-label"
                      class="styles__SelectOptionsList-b2falt-0 heJAAA"
                      id="downshift-47-menu"
                      role="listbox"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </fieldset>
        <fieldset
          class="FormField__FormFieldStyled-yeauwd-0 cnlnjc flex flex-col space-y-2"
        >
          <label
            class="inline-block flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-700"
            data-testid="FormLabel"
            for="amount"
          >
            Amount
            <div
              class="mt-1 ml-1 w-1 h-1 rounded-full bg-theme-danger-400"
              data-testid="FormLabel__required"
            />
          </label>
          <div
            class="flex space-x-2"
          >
            <div
              class="flex-1"
            >
              <div
                class="relative"
              >
                <div
                  class="Input__InputWrapperStyled-wu99qs-0 hlKLIE"
                >
                  <div
                    class="relative flex flex-1"
                  >
                    <input
                      class="Input__InputStyled-wu99qs-1 ioFtLo p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
                      data-testid="AddRecipient__amount"
                      name="amount"
                      placeholder="Amount"
                      type="text"
                      value=""
                    />
                  </div>
                  <div
                    class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
                  >
                    <div
                      class=""
                    >
                      <span
                        class="whitespace-no-break font-semibold text-sm text-theme-secondary-500 dark:text-theme-secondary-700"
                      >
                        Max
                         
                        33.75089801
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="inline-flex"
            >
              <button
                class="AddRecipient__InputButtonStyled-sc-14iwd9r-0 cBZIpU"
                data-testid="AddRecipient__send-all"
                type="button"
              >
                Send All
              </button>
            </div>
          </div>
        </fieldset>
      </div>
    </div>
  </div>
</div>
`;

exports[`AddRecipient should show zero amount if wallet has zero or insufficient balance 1`] = `
<div>
  <div
    class="AddRecipientstyles__AddRecipientWrapper-cy4ht8-0 HduBv"
  >
    <div
      class="text-theme-secondary-text hover:text-theme-primary-600"
    >
      <div
        class="flex items-center mb-2 space-x-2"
      >
        <div
          class="font-normal transition-colors duration-100 text-md"
        >
          Select a Single or Multiple Recipient Transaction
        </div>
        <div>
          <div
            class="rounded-full cursor-pointer text-theme-primary-600 hover:text-theme-primary-100 questionmark"
          >
            <div
              class="sc-bdfBwQ iyevwF"
              height="20"
              width="20"
            >
              <svg>
                questionmark.svg
              </svg>
            </div>
          </div>
        </div>
      </div>
      <div
        class="flex items-stretch select-buttons"
      >
        <button
          class="Button__StyledButton-mdtvtf-0 dznQvQ flex-1"
          data-testid="AddRecipient__single"
          type="button"
        >
          <div
            class="flex relative items-center space-x-2"
          >
            Single
          </div>
        </button>
        <button
          class="Button__StyledButton-mdtvtf-0 eJuaWR flex-1 border-l-0"
          data-testid="AddRecipient__multi"
          type="button"
        >
          <div
            class="flex relative items-center space-x-2"
          >
            Multiple
          </div>
        </button>
      </div>
    </div>
    <div
      class="SubForm__SubFormWrapper-c4tqfs-0 bbQsCL mt-6"
    >
      <div
        class="space-y-8"
      >
        <fieldset
          class="FormField__FormFieldStyled-yeauwd-0 cnlnjc flex flex-col space-y-2"
        >
          <label
            class="inline-block flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-700"
            data-testid="FormLabel"
            for="recipientAddress"
          >
            Recipient
            <div
              class="mt-1 ml-1 w-1 h-1 rounded-full bg-theme-danger-400"
              data-testid="FormLabel__required"
            />
          </label>
          <div>
            <div
              class="flex relative items-center w-full text-left"
              data-testid="SelectRecipient__wrapper"
            >
              <div
                class="relative w-full"
              >
                <div
                  class="Input__InputWrapperStyled-wu99qs-0 hlKLIE sr-only"
                >
                  <div
                    class="relative flex flex-1"
                  >
                    <input
                      aria-invalid="false"
                      class="Input__InputStyled-wu99qs-1 ioFtLo p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
                      data-testid="select-list__input"
                      name="recipientAddress"
                      readonly=""
                      value=""
                    />
                  </div>
                </div>
                <div
                  class="relative w-full"
                >
                  <div
                    aria-expanded="false"
                    aria-haspopup="listbox"
                    aria-owns="downshift-51-menu"
                    role="combobox"
                  >
                    <label
                      for="downshift-50-input"
                      id="downshift-51-label"
                    />
                    <div
                      class="Input__InputWrapperStyled-wu99qs-0 hlKLIE cursor-default"
                    >
                      <div
                        class="Circle-uw7h4j-0 blBpcG bg-theme-secondary-200 dark:bg-theme-secondary-700 border-theme-secondary-200 dark:border-theme-secondary-700"
                      />
                      <div
                        class="relative flex flex-1"
                      >
                        <input
                          aria-autocomplete="list"
                          aria-controls="downshift-51-menu"
                          aria-labelledby="downshift-51-label"
                          autocomplete="off"
                          class="Input__InputStyled-wu99qs-1 ioFtLo p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
                          data-testid="SelectDropdownInput__input"
                          id="downshift-50-input"
                          name="recipientAddress"
                          placeholder="Select option"
                          value=""
                        />
                      </div>
                      <div
                        class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
                      >
                        <div
                          class=""
                        >
                          <div
                            class="flex items-center cursor-pointer"
                            data-testid="SelectRecipient__select-recipient"
                          >
                            <div
                              class="sc-bdfBwQ iyevwF"
                              height="20"
                              width="20"
                            >
                              <svg>
                                user.svg
                              </svg>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                    <ul
                      aria-labelledby="downshift-51-label"
                      class="styles__SelectOptionsList-b2falt-0 heJAAA"
                      id="downshift-51-menu"
                      role="listbox"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </fieldset>
        <fieldset
          class="FormField__FormFieldStyled-yeauwd-0 cnlnjc flex flex-col space-y-2"
        >
          <label
            class="inline-block flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-700"
            data-testid="FormLabel"
            for="amount"
          >
            Amount
            <div
              class="mt-1 ml-1 w-1 h-1 rounded-full bg-theme-danger-400"
              data-testid="FormLabel__required"
            />
          </label>
          <div
            class="flex space-x-2"
          >
            <div
              class="flex-1"
            >
              <div
                class="relative"
              >
                <div
                  class="Input__InputWrapperStyled-wu99qs-0 hlKLIE"
                >
                  <div
                    class="relative flex flex-1"
                  >
                    <input
                      class="Input__InputStyled-wu99qs-1 ioFtLo p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
                      data-testid="AddRecipient__amount"
                      name="amount"
                      placeholder="Amount"
                      type="text"
                      value=""
                    />
                  </div>
                  <div
                    class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
                  >
                    <div
                      class=""
                    >
                      <span
                        class="whitespace-no-break font-semibold text-sm text-theme-secondary-500 dark:text-theme-secondary-700"
                      >
                        Max
                         
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="inline-flex"
            >
              <button
                class="AddRecipient__InputButtonStyled-sc-14iwd9r-0 cBZIpU"
                data-testid="AddRecipient__send-all"
                type="button"
              >
                Send All
              </button>
            </div>
          </div>
        </fieldset>
      </div>
    </div>
  </div>
</div>
`;
